
2018-01-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* config.def: added cb_missing_statement, see FR #288
	* parser.y (if_statement): first change for FR #288 leading to warning
	  message for "IF cond ELSE statements"
	* tree.c (cb_build_reference, cb_ref), parser.y (procedure_name):
	  store position (section/paragraph) for all references not only for labels
	* error.c (cb_verify_x, cb_set_ignore_error): never ignore errors that
	  depend on compiler configuration
	* parser.y (procedure_name), typeck.c (cb_validate_program_body), tree.h:
	  don't raise errors for labels in ignored code parts and skip some
	  verifications on these

2018-01-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c: moved all code parts for (output_function_entry_function)
	  to this function and adjusted the callers
	* typeck.c, parser.y, tree.h: adjusted (cb_build_program_id) to directly
	  get the external name passed, removing duplicated code

2018-01-03  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c (cb_build_move_literal): fixed bug #486, where literals moved
	  to an ANY LENGTH item where truncated to one character.
	* typeck.c (validate_move): fixed spurious "value exceeds data size"
	  warning for ANY LENGTH items.

2017-12-31  Ron Norman <rjn@inglenet.com>

	* codegen.c, tree.c: fix bug #471 Mark report fields as being
	  referenced so that the cob_field is always emitted

2017-12-26  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.h, config.c, field.c: added more lax "gc" option to
	  screen-section-rules.

2017-12-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c, codegen.c, parser.y, scanner.l, tree.h, tree.c: renamed
	  CB_PROGRAM_TYPE to COB_MODULE_TYPE_PROGRAM and CB_FUNCTION_TYPE to
	  COB_MODULE_TYPE_FUNCTION and moved definition to libcob/common.h
	* codegen.c (output_module_init): deactivated generation of currently
	  unused module_returning
